--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
   "name": "book-club-bot",
   "version": "1.0.0",
+  "description": "Telegram bot for book club",
   "main": "bot.js",
   "scripts": {
+    "start": "node bot.js",
+    "dev": "nodemon bot.js",
+    "server": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^17.2.0",
-    "node-telegram-bot-api": "^0.66.0"
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "node-telegram-bot-api": "^0.56.0"
   },
-  "description": ""
+  "devDependencies": {
+    "nodemon": "^2.0.19"
+  }
 }
